# shiftreg

./: Cargo.toml  LICENSE  Makefile  README.md  mkicon.sh  shiftreg.icon
src/: main.rs  shiftreg.icon
